--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "untitled-folder",
+  "name": "lesson_04",
   "version": "1.0.0",
+  "description": "Frirst Project",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "date-fns": "^2.29.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^6.5.0",
+    "mongoose-sequence": "^5.3.1",
+    "uuid": "^8.3.2"
   },
-  "description": "",
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.19"
   }
 }
